Fix navbar collapse
Add white background to navbar

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -20,10 +20,17 @@ body {
 
 .navbar {
   margin-bottom: 20px;
-  background: rgba(0, 0, 0, 0);
+  box-shadow: 1px 1px 3px -1px #333;
+  background: rgba(255, 255, 255, 1);
   border-radius: 0;
   border: none;
   height: 28px;
+  z-index: 9999;
+}
+
+.navbar .collapse ul {
+  background: white;
+  box-shadow: 0 1px 2px -2px #333;
 }
 
 .navbar a {
